--- a/App.html
+++ b/App.html
@@ -6,6 +6,13 @@
     <title>Document</title>
 </head>
 <body>
-    
+    <img id="bakgrund" src="./pad thai.png" alt="Två skålar med png thai">
+    <header>
+        <h1>Enkel Pad Thai</h1>
+    </Header>
+    <aside>
+        <img src="./pad thai cool.png" alt="En skål pad thai">
+        <p>Pad thai är en klassisk maträtt med thailändskt ursprung, som består av risnudlar, salladslök, böngroddar, morot, tofu, kyckling och räkor. Rätten ska ha skapats under 1930-talet i Thailand, då väder och krig ska ha påverkat landets risproduktion, vilket ledde till att man började äta nudlar istället.</p>
+    </aside>
 </body>
 </html>
