--- a/App.html
+++ b/App.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <img id="bakgrund" src="./pad thai.png" alt="Två skålar med png thai">
@@ -14,5 +15,38 @@
         <img src="./pad thai cool.png" alt="En skål pad thai">
         <p>Pad thai är en klassisk maträtt med thailändskt ursprung, som består av risnudlar, salladslök, böngroddar, morot, tofu, kyckling och räkor. Rätten ska ha skapats under 1930-talet i Thailand, då väder och krig ska ha påverkat landets risproduktion, vilket ledde till att man började äta nudlar istället.</p>
     </aside>
+    <nav id="ingred">
+        <b>Ingredienser</b>
+        <p>*4 portioner</p>
+        <ul>
+            <li>180g Risnudlar</li>
+            <li>2 msk matolja</li>
+            <li>400g Strimlad kycklingfilé</li>
+            <li>300g Stimlad vitkål</li>
+            <li>1 strimlad morot</li>
+            <li>1 ägg</li>
+            <li>1 dl Grovt hackade jordnötter</li>
+            <li>1/2 flaska woksås</li>
+        </ul>
+        <p>Till servering</p>
+        <ul>
+            <li>Lime</li>
+            <li>Koriander</li>
+        </ul>
+        <a href="https://www.mathem.se/">Ingredienser kan köpas här</a>
+    </nav>
+    <div id="Instr">
+        <b>Gör såhär</b>
+        <ol>
+            <li>Tillaga nudlar enligt förpackningen</li>
+            <li>Bryn den strimlade kycklingen i olja</li>
+            <li>Tillsätt strimlad vitkål och morot, stek i 1-2 min på hög värme.</li>
+            <li>Gör plats i pannan och stek ägget under omrörning.</li>
+            <li>Klipp nudlarna grovt, tillsätt dem och woksåsen. Rör om hastigt tills allt är varmt.</li>
+            <li>Blanda i grovt hackade jordnötter och servera.</li>
+            <li>Till servering: Garnera med limeklyftor och koriander.</li>
+        </ol>
+    </div>
+
 </body>
 </html>
