Klar med content i html fil

--- a/App.html
+++ b/App.html
@@ -47,6 +47,11 @@
             <li>Till servering: Garnera med limeklyftor och koriander.</li>
         </ol>
     </div>
-
+    <img id="estet" src="./phad thai.png" alt="En skål pad thai">
+    <footer>
+        <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimgflip.com%2Ftag%2Fshitpost%3Fsort%3Dtop-30d&psig=AOvVaw2CK9b-zB09wlbMMjE7qExr&ust=1698136609285000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCNDW0v3hi4IDFQAAAAAdAAAAABAo">Simpla recept</a>
+        <a href="mailto:elev@elev.se">Kontakta mig</a>
+        <a href="https://www.reddit.com/r/TwoSentenceHorrors/comments/179brhp/i_was_microwaving_my_leftover_fish/">Svårare recept</a>
+    </footer>
 </body>
 </html>
