--- a/App.html
+++ b/App.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <img id="bakgrund" src="./pad thai.png" alt="Två skålar med png thai">
+
     <header>
         <h1>Enkel Pad Thai</h1>
     </Header>
@@ -15,7 +15,7 @@
         <img src="./pad thai cool.png" alt="En skål pad thai">
         <p>Pad thai är en klassisk maträtt med thailändskt ursprung, som består av risnudlar, salladslök, böngroddar, morot, tofu, kyckling och räkor. Rätten ska ha skapats under 1930-talet i Thailand, då väder och krig ska ha påverkat landets risproduktion, vilket ledde till att man började äta nudlar istället.</p>
     </aside>
-    <nav id="ingred">
+    <nav>
         <b>Ingredienser</b>
         <p>*4 portioner</p>
         <ul>
@@ -35,7 +35,7 @@
         </ul>
         <a href="https://www.mathem.se/">Ingredienser kan köpas här</a>
     </nav>
-    <div id="Instr">
+    <div id="instr">
         <b>Gör såhär</b>
         <ol>
             <li>Tillaga nudlar enligt förpackningen</li>
