--- a/App.html
+++ b/App.html
@@ -10,9 +10,10 @@
 
     <header>
         <h1>Enkel Pad Thai</h1>
+        <img id="logo" src="./360_F_441732816_Eo3fHdX3oImKtXdkYkktCrR1mbwAT9I6.png" alt="">
     </Header>
     <aside>
-        <img src="./pad thai cool.png" alt="En skål pad thai">
+        <img id="sid" src="./pad thai cool.png" alt="En skål pad thai">
         <p>Pad thai är en klassisk maträtt med thailändskt ursprung, som består av risnudlar, salladslök, böngroddar, morot, tofu, kyckling och räkor. Rätten ska ha skapats under 1930-talet i Thailand, då väder och krig ska ha påverkat landets risproduktion, vilket ledde till att man började äta nudlar istället.</p>
     </aside>
     <nav>
@@ -47,7 +48,9 @@
             <li>Till servering: Garnera med limeklyftor och koriander.</li>
         </ol>
     </div>
-    <img id="estet" src="./phad thai.png" alt="En skål pad thai">
+    <div class="estet">
+        <img id="estet" src="./phad thai.png" alt="En skål pad thai">
+    </div>
     <footer>
         <a href="https://www.google.com/url?sa=i&url=https%3A%2F%2Fimgflip.com%2Ftag%2Fshitpost%3Fsort%3Dtop-30d&psig=AOvVaw2CK9b-zB09wlbMMjE7qExr&ust=1698136609285000&source=images&cd=vfe&opi=89978449&ved=0CA8QjRxqFwoTCNDW0v3hi4IDFQAAAAAdAAAAABAo">Simpla recept</a>
         <a href="mailto:elev@elev.se">Kontakta mig</a>
